--- a/jerry-core/CMakeLists.txt
+++ b/jerry-core/CMakeLists.txt
@@ -112,6 +112,7 @@ project (JerryCore CXX C ASM)
      ${CMAKE_SOURCE_DIR}/jerry-core/ecma/base
      ${CMAKE_SOURCE_DIR}/jerry-core/ecma/operations
      ${CMAKE_SOURCE_DIR}/jerry-core/parser/js
+     ${CMAKE_SOURCE_DIR}/jerry-core/parser/js/bc
      ${CMAKE_SOURCE_DIR}/jerry-core/parser/js/collections
      ${CMAKE_SOURCE_DIR}/jerry-core/parser/regexp
      ${CMAKE_SOURCE_DIR}/jerry-core/jrt)
@@ -131,6 +132,7 @@ project (JerryCore CXX C ASM)
   file(GLOB SOURCE_CORE_ECMA_BASE             ecma/base/*.cpp)
   file(GLOB SOURCE_CORE_ECMA_OPERATIONS       ecma/operations/*.cpp)
   file(GLOB SOURCE_CORE_PARSER_JS             parser/js/*.cpp)
+  file(GLOB SOURCE_CORE_PARSER_JS_BC          parser/js/bc/*.cpp)
   file(GLOB SOURCE_CORE_PARSER_JS_COLLECTIONS parser/js/collections/*.cpp)
   file(GLOB SOURCE_CORE_PARSER_REGEXP         parser/regexp/*.cpp)
   file(GLOB SOURCE_CORE_JRT                   jrt/*.cpp)
@@ -145,6 +147,7 @@ project (JerryCore CXX C ASM)
       ${SOURCE_CORE_ECMA_BASE}
       ${SOURCE_CORE_ECMA_OPERATIONS}
       ${SOURCE_CORE_PARSER_JS}
+      ${SOURCE_CORE_PARSER_JS_BC}
       ${SOURCE_CORE_PARSER_JS_COLLECTIONS}
       ${SOURCE_CORE_PARSER_REGEXP}
       ${SOURCE_CORE_JRT})
