allow_to_customize_address_for_jerry_mem_heap
JerryScript-DCO-1.0-Signed-off-by: Tamas Czene tczene.u-szeged@partner.samsung.com

--- a/jerry-core/CMakeLists.txt
+++ b/jerry-core/CMakeLists.txt
@@ -177,6 +177,11 @@ project (JerryCore CXX C ASM)
   set(INCLUDE_CORE ${INCLUDE_CORE} ${INCLUDE_THIRD_PARTY_VALGRIND})
  endif()
 
+ # JERRY_HEAP_SECTION_ATTR
+ if(DEFINED JERRY_HEAP_SECTION_ATTR)
+  set(DEFINES_JERRY ${DEFINES_JERRY} JERRY_HEAP_SECTION_ATTR=${JERRY_HEAP_SECTION_ATTR})
+ endif()
+
  # Log
   if("${ENABLE_LOG}" STREQUAL "ON")
    set(DEFINES_JERRY ${DEFINES_JERRY} JERRY_ENABLE_LOG)
