Generate `jerry.map` file on build.
JerryScript-DCO-1.0-Signed-off-by: Sung-Jae Lee sjlee@mail.com

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,6 +234,14 @@ project (Jerry CXX C ASM)
    set(LINKER_FLAGS_COMMON "${LINKER_FLAGS_COMMON} -flto")
   endif()
 
+ # Generage map file
+  if("${PLATFORM}" STREQUAL "DARWIN")
+   set(MAP_FILE_FLAGS "-Xlinker -map -Xlinker jerry.map")
+  else()
+   set(MAP_FILE_FLAGS "-Xlinker -Map -Xlinker jerry.map")
+  endif()
+  set(LINKER_FLAGS_COMMON "${LINKER_FLAGS_COMMON} ${MAP_FILE_FLAGS}")
+
  # Turn off stack protector
   set(COMPILE_FLAGS_JERRY "${COMPILE_FLAGS_JERRY} -fno-stack-protector")
 
